--- a/index.html
+++ b/index.html
@@ -10,14 +10,32 @@
     
     <!-- Audio Player for Song 1 -->
     <audio controls>
-        <source src="mp3/song1.mp3" type="audio/mpeg">
+        <source src="mp3/Di Na Muli Official The Itchyworms.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     
     <!-- Audio Player for Song 2 -->
     <audio controls>
-        <source src="mp3/song2.mp3" type="audio/mpeg">
+        <source src="mp3/Joji SLOW DANCING IN THE DARK.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+
+    <per>
+01 24, 2025
+1 minute ago
+Joji SLOW DANCING IN THE DARK.mp3
+01 24, 2025
+1 minute ago
+Radiohead Creep.mp3
+01 24, 2025
+1 minute ago
+Radiohead No Surprises.mp3
+01 24, 2025
+1 minute ago
+Rico Blanco Youll Be Safe Here Official Visualizer.mp3
+    </per>
 </body>
 </html>
+
+
+
