--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My MP3 Collection</title>
+    <title>Welcome to Jassolvix CDN MP3 Collection</title>
 </head>
 <body>
-    <h1>Welcome to My MP3 Collection</h1>
+    <h1>Welcome to Jassolvix CDN MP3 Collection</h1>
+    <p>&copy; Musikakoo Github CDN</p><br>
     <pre>
         <b>Joji | Slow Dancing In The Dark</b>
         https://jassolvix.github.io/mp3//Joji%20%20SLOW%20DANCING%20IN%20THE%20DARK.mp3
